--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head><title>Iniyavan's School</title></head>
 <body>
 <h1>This is my school the Ashok Leyland School</h1>
+  <p>Hello how are you? im under the water.</p>
 <p>Located in hosur</p>
 </body>
 </html>
